--- a/app/styles/_color.scss
+++ b/app/styles/_color.scss
@@ -1,5 +1,9 @@
 $off-canvas-bg: rgba(51, 65, 83, 1);
+$solid-white: #ffffff;
 $menu-idle-color: #ffffff;
 $menu-hover-color: #4a90e2;
 $menu-icon-idle-color: #4a90e2;
 $menu-active-bg: #4c91dd;
+$table-header-bg-color: #d1e3f6;
+$table-hover-bg-color: #f2fcfd;
+$table-text-color: #424242;
