--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,10 +6,11 @@
   @import "table";
   @import "topbar";
   @import "banner";
+  @import "body-content";
+  @import "running-number";
+  @import "loading";
 
   .content-wrapper {
     padding: 30px;
   }
-
-
 }
