Add simple form

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,6 +9,7 @@
   @import "body-content";
   @import "running-number";
   @import "loading";
+  @import "main-form";
 
   .content-wrapper {
     padding: 30px;
