--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,6 +10,7 @@
   @import "running-number";
   @import "loading";
   @import "main-form";
+  @import "reward";
 
   .content-wrapper {
     padding: 30px;
