--- a/app/styles/_main-form.scss
+++ b/app/styles/_main-form.scss
@@ -1,5 +1,7 @@
 #main-form {
   padding-top: 40px;
+  max-width: 1100px;
+  margin: auto;
   h2 {
     font-family: 'AIA-head' !important;
     color: $topbar-bg-color;
