--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -11,6 +11,7 @@
   @import "loading";
   @import "main-form";
   @import "reward";
+  @import "whatsyourwhy";
 
   .content-wrapper {
     padding: 30px;
