--- a/app/styles/_live-wall.scss
+++ b/app/styles/_live-wall.scss
@@ -22,6 +22,20 @@
     }
   }
 
+  .gone_3 {
+    margin-left: 10%;
+    @media screen and (max-width: $break-small) {
+      margin-left: 0;
+    }
+  }
+
+  .gone_2 {
+    margin-left: 30%;
+    @media screen and (max-width: $break-small) {
+      margin-left: 25%;
+    }
+  }
+
   .live-wall-card {
     width: 100%;
     border: 1px solid #fff;
