--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -3,9 +3,9 @@
   font-family: 'AIA-body' !important;
   color: #fff;
   font-size: 20px;
-  padding-top: 30px;
+  padding-top: 20px;
   @media screen and (max-width: $break-small) {
-    font-size: 40px;
+    font-size: 14px;
   }
   & > .grid-x {
     margin: auto;
@@ -21,8 +21,8 @@
     color: #b3b1a8;
     margin: 0px;
     @media screen and (max-width: $break-small) {
-      font-size: 60px;
-      margin-top: 20px;
+      font-size: 30px;
+      margin-top: 10px;
     }
   }
 
@@ -35,7 +35,8 @@
     line-height: 45px;
 
     @media screen and (max-width: $break-small) {
-      line-height: 65px;
+      line-height: 38px;
+      margin-bottom: 0;
     }
   }
 
@@ -46,7 +47,8 @@
     line-height: 1;
 
     @media screen and (max-width: $break-small) {
-      height: 70px;
+      height: 38px;
+      margin: 0;
     }
   }
 
@@ -58,27 +60,20 @@
     opacity: 0.7;
     @media screen and (max-width: $break-small) {
       width: 100%;
-      margin: 40px 0;
+      margin: 20px 0;
     }
   }
 
   .link {
     text-align: center;
     .center {
-      margin: 0 10px;
-      @media screen and (max-width: $break-small) {
-        margin: 0 40px;
-      }
+      margin: 0 10px !important;
     }
 
     a {
       width: 24px;
       height: 24px;
       display: inline-block;
-      @media screen and (max-width: $break-small) {
-        width: 64px;
-        height: 64px;
-      }
     }
 
   }
@@ -88,7 +83,7 @@
     text-align: center;
     padding: 40px 0;
     @media screen and (max-width: $break-small) {
-      padding: 100px 0;
+      padding: 50px 0 60px 0;
     }
 
   }
