--- a/app/styles/_main-form.scss
+++ b/app/styles/_main-form.scss
@@ -2,14 +2,34 @@
   padding-top: 40px;
   max-width: 1100px;
   margin: auto;
+
+  @media screen and (max-width: $break-small) {
+    width: 95%;
+    padding: 0;
+  }
+
   h2 {
     font-family: 'AIA-head' !important;
     color: $topbar-bg-color;
     font-size: 60px;
     text-align: center;
+    line-height: 1.2;
 
     @media screen and (max-width: $break-small) {
-      font-size: 72px;
+      font-size: 36px;
+
+    }
+  }
+
+  h3 {
+    font-family: 'AIA-head' !important;
+    color: $topbar-bg-color;
+    font-size: 48px;
+    text-align: center;
+    line-height: 1;
+
+    @media screen and (max-width: $break-small) {
+      font-size: 36px;
     }
   }
 
@@ -22,8 +42,22 @@
     text-align: center;
     margin: auto;
     @media screen and (max-width: $break-small) {
-      font-size: 40px;
-      width: 70%;
+      font-size: 20px;
+      width: 80%;
+    }
+  }
+
+  .form-container {
+    margin-top: 60px;
+  }
+
+  label {
+    font-family: 'AIA-head' !important;
+    color: $topbar-bg-color;
+    font-size: 24px;
+    line-height: 1;
+    @media screen and (max-width: $break-small) {
+      font-size: 20px;
     }
   }
 }
