--- a/app/styles/_whatsyourwhy.scss
+++ b/app/styles/_whatsyourwhy.scss
@@ -6,7 +6,7 @@
   margin: 30px auto 0 auto;
 
   @media screen and (max-width: $break-small) {
-    font-size: 40px;
+    font-size: 20px;
     width: 95%;
   }
 
@@ -16,7 +16,7 @@
     font-size: 60px;
 
     @media screen and (max-width: $break-small) {
-      font-size: 72px;
+      font-size: 36px;
       text-align: center;
     }
   }
@@ -25,7 +25,7 @@
     border: 1px solid #d3d3d3;
 
     @media screen and (max-width: $break-small) {
-      font-size: 40px;
+      font-size: 20px;
       width: 95%;
     }
 
@@ -33,14 +33,14 @@
       padding: 15px;
       line-height: 25px;
       @media screen and (max-width: $break-small) {
-        padding: 15px 15px 15px 30px;
-        line-height: 40px;
+        padding: 15px 15px 15px 20px;
+        line-height: 1;
       }
 
       .spacing {
         height: 5px;
         @media screen and (max-width: $break-small) {
-          height: 35px;
+          height: 20px;
         }
       }
     }
@@ -57,10 +57,10 @@
         width: 100%;
         height: 130px;
         @media screen and (max-width: $break-small) {
-            width: 180px;
-            height: 180px;
+            width: 90px;
+            height: 90px;
             float: left;
-            margin-right: 20px;
+            margin-right: 10px;
         }
     }
   }
