--- a/app/styles/_reward.scss
+++ b/app/styles/_reward.scss
@@ -1,7 +1,16 @@
+#reward-wrapper {
+  @media screen and (max-width: $break-small) {
+    max-width: 95%;
+    margin: auto;
+  }
+}
+
 #reward {
   padding-top: 40px;
   max-width: 1100px;
   margin: auto;
+
+
 
   @media screen and (max-width: $break-small) {
     max-width: 85%;
