--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -20,7 +20,8 @@
     border: 1px solid $topbar-bg-color;
     background: #fff;
     display: block;
-    width: 360px;
+    max-width: 360px;
+    width: 100%;
     margin: 30px auto;
     height: 50px;
     line-height: 50px;
@@ -34,8 +35,45 @@
       font-size: 24px;
       height: 38px;
       line-height: 38px;
-      width: 95%;
+      width: 100%;
+      max-width: 100%;
     }
+  }
+
+  .button-facebook, .button-google  {
+    display: block;
+    max-width: 360px;
+    width: 100%;
+    margin: 10px auto 20px auto;
+    height: 50px;
+    line-height: 50px;
+    font-size: 12px;
+    text-align: center;
+    color: #fff;
+    background-repeat: no-repeat;
+    background-position-y: center;
+    background-position-x: 12px;
+    line-height: 1.2;
+    text-align: start;
+    padding-left: 48px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    max-width: 135px;
+
+    @media screen and (max-width: $break-small) {
+      height: 35px;
+    }
+  }
+
+  .button-facebook {
+    background-color: #39589b;
+    background-image: url('/img/ic_fb.png');
+    background-position-x: 18px;
+  }
+
+  .button-google {
+    background-color: #e14932;
+    background-image: url('/img/ic_gg.png');
   }
 
   .content-wrapper {
