--- a/app/styles/_live-wall.scss
+++ b/app/styles/_live-wall.scss
@@ -1,4 +1,4 @@
-#live-wall {
+#live-wall, #add-reason-form {
   margin-top: 50px;
   padding-top: 10px;
   padding-bottom: 1px;
@@ -146,7 +146,7 @@
     }
 
     .img {
-      background: rgba(255, 255, 255, 0.7);
+      background: rgba(255, 255, 255, 1);
       height: 122px;
       overflow: hidden;
       &:before {
@@ -207,6 +207,4 @@
       font-size: 36px;
     }
   }
-
-
 }
