--- a/app/styles/_video.scss
+++ b/app/styles/_video.scss
@@ -1,17 +1,11 @@
 #video {
   max-width: 915px;
   margin: auto;
-
-  .responsive-embed iframe {
-    height: 550px !important;
-    margin-top: 80px;
-    border: none;
-    @media screen and (max-width: $break-small) {
-      height: inherit;
-      margin-top: 40px;
-    }
-  }
+  padding-top: 80px;
+  padding-bottom: 60px;
   @media screen and (max-width: $break-small) {
     width: 95%;
+    padding-top: 40px;
+    padding-bottom: 0px;
   }
 }
