--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -1,5 +1,6 @@
 #footer {
     background: #302f2c;
+    font-family: 'AIA-body' !important;
     div {
         padding: 20px;
         div {
@@ -20,6 +21,7 @@
 
 #box__policy {
     background: #292825;
+    font-family: 'AIA-body' !important;
     div {
         padding: 20px;
         p {
