--- a/app/styles/_body-content.scss
+++ b/app/styles/_body-content.scss
@@ -1,24 +1,30 @@
 #body-content {
     background: $topbar-bg-color;
     @media screen and (min-width: $break-not-small) {
-        height: 1135px;
+        height: 785px;
     }
     .map {
         position: relative;
         text-align: center;
         .map-body {
-            width: 100%;
-            text-align: center;
+          width: 75%;
+          margin: -53px auto -20px auto;
+          text-align: center;
+          z-index: -1;
             @media screen and (min-width: $break-not-small) {
-                position: absolute;
-                width: 50%;
-                left: 7%;
-                top: 40px;
-                text-align: right;
-                height: 1040px;
-                line-height: 1040px;
-                max-width: 650px;
-                min-width: 550px;
+              width: 50%;
+              text-align: center;
+              max-width: 650px;
+              min-width: 550px;
+
+              img {
+                display: inline-block;
+                vertical-align: top;
+                max-width: 100%;
+                height: auto;
+                margin-top: 75px;
+                opacity: 0.8;
+              }
             }
         }
         .map-title {
@@ -28,49 +34,63 @@
             }
         }
         .all-title {
+          z-index: 1;
+          position: relative;
             @media screen and (min-width: $break-not-small) {
-                width: 570px;
-                position: absolute;
-                z-index: 1;
-                left: 50%;
-                top: 135px;
+              width: 375px;
+              position: absolute;
+              z-index: 1;
+              right: 59%;
+              top: 205px;
             }
         }
         #runing-number {
             @media screen and (min-width: $break-not-small) {
-                width: 570px;
-                position: absolute;
-                left: 50%;
-                top: 496px;
-                z-index: 1;
+              width: 570px;
+              position: absolute;
+              left: 52%;
+              top: 290px;
+              z-index: 1;
             }
         }
         h2 {
-            font-size: 48px;
-            margin-top: 15px;
+            font-size: 32px;
+            margin-top: 0;
             color: #fff;
             font-family: 'AIA-head' !important;
+            .big {
+              font-size: 42px;
+            }
             @media screen and (max-width: $break-small) {
                 font-size: 24px;
                 margin-top: 10px;
+                .big {
+                  font-size: 35px;
+                }
             }
         }
         .leading-text {
-            margin-top: 15px;
             color: #fff;
             font-family: 'AIA-head' !important;
             line-height: 1;
             font-size: 32px;
+            width: 95%;
+            display: block;
+            margin: auto;
+            margin-top: 15px;
+
             .text-big {
                 font-size: 45px;
             }
+
+            width: 95%;
             @media screen and (min-width: $break-not-small) {
-                width: 570px;
-                position: absolute;
-                z-index: 1;
-                left: 50%;
-                top: 635px;
-                font-size: 36px;
+              width: 570px;
+              position: absolute;
+              z-index: 1;
+              left: 52%;
+              top: 390px;
+              font-size: 36px;
                 .text-big {
                     font-size: 48px;
                 }
@@ -95,22 +115,25 @@
             line-height: 1.275;
             color: #fff;
             display: block;
-            width: 95%;
+            width: 90%;
             margin: 35px auto;
-            font-size: 24px;
+            font-size: 20px;
             font-family: 'AIA-body' !important;
             .text-big {
-                font-size: 36px;
+                font-size: 30px;
                 font-family: 'AIA-body' !important;
                 font-weight: bold;
             }
             @media screen and (min-width: $break-not-small) {
-                margin: 0;
-                text-align: left;
-                position: absolute;
-                width: 660px;
-                left: 47%;
-                top: 875px;
+              margin: 0;
+              position: absolute;
+              width: 480px;
+              right: 55%;
+              top: 425px;
+              font-size: 18px;
+                .text-big {
+                  font-size: 28px;
+                }
             }
         }
     }
