--- a/app/styles/_live-wall.scss
+++ b/app/styles/_live-wall.scss
@@ -218,4 +218,15 @@
       background: rgba(0, 0, 0, 0.3);
     }
   }
+
+  #back-button {
+    position: fixed;
+    left: 10px;
+    top: 10px;
+    @media screen and (max-width: $break-small) {
+      zoom: 0.5;
+      top: 35px;
+      z-index: 9;
+    }
+  }
 }
