--- a/app/styles/_add-reason-form.scss
+++ b/app/styles/_add-reason-form.scss
@@ -18,6 +18,19 @@
     position: relative;
     width: 100%;
     height: 41px;
+
+    &:after {
+      content: ' ';
+      width: 0;
+      height: 0;
+      border-left: 5px solid transparent;
+      border-right: 5px solid transparent;
+      border-top: 7px solid #ABABAB;
+      position: absolute;
+      top: 18px;
+      right: 20px;
+    }
+
     @media screen and (max-width: $break-small) {
       height: 44px;
       margin: 20px 0 10px 0;
