--- a/app/styles/_main-form.scss
+++ b/app/styles/_main-form.scss
@@ -268,11 +268,12 @@
 }
 
 #preCanvas2 {
-  zoom: 0.5;
+  zoom: 0.743;
   position: relative;
-  left: 0;
+  left: -120px;
   z-index: 1;
   @media screen and (max-width: $break-small) {
     zoom: 1;
+    left: 0px;
   }
 }
