Rotate image move image

--- a/app/styles/_main-form.scss
+++ b/app/styles/_main-form.scss
@@ -187,6 +187,7 @@
   left: 0;
   top: 0;
   margin: auto;
+  background: #fff;
   z-index: -99;
   .frame {
     position: absolute;
@@ -283,7 +284,11 @@
 #select-image {
   margin-left: -104px;
   margin-right: -25px;
-  margin-top: 20px;
+  margin-top: 10px;
+
+  .grid-x {
+    margin-bottom: 10px;
+  }
   @media screen and (max-width: $break-small) {
     width: 340px;
     margin: auto;
