--- a/app/styles/_whatsyourwhy.scss
+++ b/app/styles/_whatsyourwhy.scss
@@ -64,4 +64,34 @@
         }
     }
   }
+  .grid-spacing {
+    height: 80px;
+    @media screen and (max-width: $break-small) {
+      height: 15px;
+    }
+  }
+
+  h4 {
+    font-family: 'AIA-head' !important;
+    color: #302F2C;
+    font-size: 40px;
+    @media screen and (max-width: $break-small) {
+      font-size: 30px;
+      margin-top: 15px;
+    }
+  }
+
+  p {
+    color: #302F2C;
+  }
+
+
+}
+
+.red-line {
+  height: 3px;
+  width: 100%;
+  max-width: 1100px;
+  margin: 40px auto;
+  background: $topbar-bg-color;
 }
