--- a/app/styles/_whatsyourwhy.scss
+++ b/app/styles/_whatsyourwhy.scss
@@ -21,6 +21,13 @@
     }
   }
 
+  .top-des {
+    text-overflow: ellipsis;
+    height: 182px;
+    overflow: hidden;
+    line-height: 1.3;
+  }
+
   .card {
     border: 1px solid #d3d3d3;
 
@@ -42,6 +49,13 @@
         @media screen and (max-width: $break-small) {
           height: 20px;
         }
+      }
+
+      p {
+        margin: 0;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
       }
     }
 
