--- a/app/styles/_body-content.scss
+++ b/app/styles/_body-content.scss
@@ -134,6 +134,7 @@
             font-family: 'AIA-body' !important;
             position: relative;
             z-index: 1;
+            margin-bottom: 0;
             .text-big {
                 font-size: 30px;
                 font-family: 'AIA-body' !important;
