--- a/app/styles/_main-form.scss
+++ b/app/styles/_main-form.scss
@@ -284,7 +284,7 @@
     z-index: 1;
     margin-top: -120px;
     margin-bottom: -90px;
-    
+
     @media screen and (max-width: $break-small) {
       margin-top: -20px;
       margin-bottom: 0px;
@@ -322,6 +322,22 @@
         -moz-box-shadow:    0px 0px 11px 0px rgba(184, 50, 64, 1);
         box-shadow:         0px 0px 11px 0px rgba(184, 50, 64, 1);
       }
+    }
+  }
+}
+
+.frame-from {
+  max-width: 1100px;
+  margin: auto;
+  height: 380px;
+  iframe {
+    width: 100%;
+    height: 380px;
+  }
+  @media screen and (max-width: 782px) {
+    height: 610px;
+    iframe {
+      height: 610px;
     }
   }
 }
