--- a/app/styles/_topbar.scss
+++ b/app/styles/_topbar.scss
@@ -1,112 +1,98 @@
 #main-menu-container {
-  font-family: 'AIA-head' !important;
-  background: $topbar-bg-color;
-  height: 88px;
-  padding: 0 55px;
-  position: relative;
-
-  .menu.submenu {
+    font-family: 'AIA-head' !important;
+    background: $topbar-bg-color;
+    height: 88px;
+    padding: 0 55px;
+    position: relative;
+    .menu.submenu {
         width: 50%;
         background-color: rgba(211, 15, 62, 0.95);
         @media screen and (max-width: $break-small) {
-          width: 100%;
-        }
-
-        li {
-          a {
-            margin: auto;
-            border-width: 1px;
-            border-left: 0;
-            border-right: 0;
-            border-color: #d30f3e;
-            border-style: solid;
             width: 100%;
-            text-align: center;
-          }
-
-          background: #fff;
-
-          &:last-child {
-            background: none;
-          }
         }
-
-
-  }
-
-  @media screen and (max-width: $break-small) {
-    height: 44px;
-    padding: 0;
-    margin: 0;
-  }
-
-  #logo {
-    position: absolute;
-    left: 55px;
-    z-index: 1;
-    top: 20px;
-    height: 48px;
-    @media screen and (max-width: $break-small) {
-      left: 10px;
-      top: 9px;
-      height: 28px;
+        li {
+            a {
+                margin: auto;
+                border-width: 1px;
+                border-left: 0;
+                border-right: 0;
+                border-color: #d30f3e;
+                border-style: solid;
+                width: 100%;
+                text-align: center;
+            }
+            background: #fff;
+            &:last-child {
+                background: none;
+            }
+        }
     }
-  }
-
-  .menu {
-    a, a.sub-menu {
-      color: $topbar-menu-color;
-      padding: 0 10px;
-      height: 88px;
-      line-height: 88px;
-      position: relative;
-      font-size: 36.35px;
-
-      @media screen and (max-width: $break-small) {
-        color: #ffffff;
-        padding: 0 10px;
-        position: relative;
+    @media screen and (max-width: $break-small) {
         height: 44px;
-        line-height: 44px;
-      }
-
-      &:hover {
-        color: #88092d;
-      }
-
-      &:after {
-        display: none !important;
-      }
+        padding: 0;
+        margin: 0;
     }
-
-    a.sub-menu {
-      color: $topbar-bg-color;
-      height: 90px;
-      line-height: 90px;
+    #logo {
+        cursor: pointer;
+        position: absolute;
+        left: 55px;
+        z-index: 1;
+        top: 20px;
+        height: 48px;
+        @media screen and (max-width: $break-small) {
+            left: 10px;
+            top: 9px;
+            height: 28px;
+        }
     }
-  }
-
-  #up-button {
-    position: fixed;
-    right: 40px;
-    bottom: 40px;
-    z-index: 99;
-    @media screen and (max-width: $break-small) {
-      zoom: 0.5;
-      z-index: 9;
+    .menu {
+        a,
+        a.sub-menu {
+            color: $topbar-menu-color;
+            padding: 0 10px;
+            height: 88px;
+            line-height: 88px;
+            position: relative;
+            font-size: 36.35px;
+            @media screen and (max-width: $break-small) {
+                color: #ffffff;
+                padding: 0 10px;
+                position: relative;
+                height: 44px;
+                line-height: 44px;
+            }
+            &:hover {
+                color: #88092d;
+            }
+            &:after {
+                display: none !important;
+            }
+        }
+        a.sub-menu {
+            color: $topbar-bg-color;
+            height: 90px;
+            line-height: 90px;
+        }
     }
-  }
-
+    #up-button {
+        position: fixed;
+        right: 40px;
+        bottom: 40px;
+        z-index: 99;
+        @media screen and (max-width: $break-small) {
+            zoom: 0.5;
+            z-index: 9;
+        }
+    }
 }
 
 #phone-menu {
-  display: flow-root;
-  & > li {
-    width: 100%;
-  }
-
+    display: flow-root;
+    &>li {
+        width: 100%;
+    }
 }
 
 #phone-menu-list {
-  z-index: 999;
+    z-index: 999;
 }
